--- a/WebApplication2/WebApplication2/appsettings.json
+++ b/WebApplication2/WebApplication2/appsettings.json
@@ -1,15 +1,12 @@
-﻿{
+﻿
+{
   "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
+    "LogLevel": {
+      "Default": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "connectionStrings": {
+    "bookDbConnectionString": "Server=HCM-HUYDT;Database=BookHachi;Trusted_Connection=True;MultipleActiveResultSets=true;User ID=sa;Password=Ad123456"
   }
 }
