--- a/WebApplication2/WebApplication2/appsettings.json
+++ b/WebApplication2/WebApplication2/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "connectionStrings": {
-    "bookDbConnectionString": "Server=HCM-HUYDT;Database=BookHachi;Trusted_Connection=True;MultipleActiveResultSets=true;User ID=sa;Password=Ad123456"
+    "bookDbConnectionString": "Server=DESKTOP-U2D6D9H\\SQLEXPRESS;Database=BookHachi;Trusted_Connection=True;MultipleActiveResultSets=true;User ID=sa;Password=admin@123"
   }
 }
