--- a/BookApiProject/appsettings.json
+++ b/BookApiProject/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "connectionStrings": {
-    "bookDbConnectionString": "Server=DESKTOP-U2D6D9H\\SQLEXPRESS;Database=BOOKCOLD;Trusted_Connection=True;MultipleActiveResultSets=true;User ID=sa;Password=admin@123"
+    "bookDbConnectionString": "Server=DESKTOP-U2D6D9H\\SQLEXPRESS;Database=BOOKLuLu;Trusted_Connection=True;MultipleActiveResultSets=true;User ID=sa;Password=admin@123"
   }
 }
